create github pages

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ Thank you! As a token of our appreciation, Webtalk's first 1,000,000 users* who 
     </div>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/r">bootstrap templates</a></section><section class="cid-r2KDpzH5BL" id="video2-1">
+<section class="engine"><a href="https://mobiri.se/e">how to make your own website</a></section><section class="cid-r2KDpzH5BL" id="video2-1">
 
     
     
